# paper-wallet

./: .gitignore  AUDIT.md  Cargo.toml  LICENSE  README.md  V08_SECURITY_FIX.md  build.sh  worker.js  wrangler.toml
src/: english_words.rs  lib.rs  mnemonics.rs
tests/: regression_test.rs  test_user_seed.rs  tos_compatibility.rs
tools/verify/: README.md  go.mod  go.sum  main.go
web/: app.js  i18n.js  index.html  styles.css
